<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp"
        tools:context=".DataActivity">

        <TextView
            android:id="@+id/textView_title_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/datos_generales"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"/>

        <TextView
            android:id="@+id/textView_instructions_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/escribe_tu_informacion"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_title_data" />

            <EditText
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_instructions_data"
                android:id="@+id/autoCompleteTextView_name_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="28"
                android:digits="@string/abs_esp_ABC"
                android:hint="@string/nombre"
                android:inputType="none"
                android:textColorHint="@color/colorBlack"
                tools:ignore="Autofill" />

        <TextView
            android:id="@+id/textView_calendar_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/fecha_de_nacimiento"
            android:textColor="@color/colorBlack"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView_name_data" />

        <com.example.variousobjects.ScrollCalendar
            android:id="@+id/calendarView_birthdate_data"
            android:layout_width="0dp"
            android:layout_height="320dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView_calendar_data" />

        <TextView
            android:id="@+id/textView_sexo_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:paddingTop="15dp"
            android:text="@string/genero"
            android:textColor="@color/colorBlack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/radioGroup_gender_data" />

        <RadioGroup
            android:id="@+id/radioGroup_gender_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/textView_sexo_data"
            app:layout_constraintTop_toBottomOf="@+id/calendarView_birthdate_data">

            <RadioButton
                android:id="@+id/radioButton_hombre_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/hombre" />

            <RadioButton
                android:id="@+id/radioButton_mujer_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mujer" />

        </RadioGroup>



            <EditText
                android:id="@+id/autoCompleteTextView_phone_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:maxLength="10"
                android:digits="@string/n123"
                android:ems="10"
                android:hint="@string/telefono"
                android:inputType="phone"
                android:textColorHint="@color/colorBlack"
                tools:ignore="Autofill"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/radioGroup_gender_data"
                app:layout_constraintTop_toTopOf="@+id/radioGroup_gender_data"/>



        <TextView
            android:id="@+id/textView_nacionality_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/nacionalidad"
            android:textColor="@color/colorBlack"
            android:paddingTop="14dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/autoCompleteTextView_phone_data" />

        <Spinner
            android:id="@+id/spinner_nacionality_data"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView_nacionality_data"
            app:layout_constraintTop_toTopOf="@+id/textView_nacionality_data" />

        <Button
            android:id="@+id/button_clear_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/limpiar"
            android:textColor="@color/colorWhite"
            android:background="@color/colorAccent"
            app:layout_constraintEnd_toStartOf="@+id/button_next_data"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spinner_nacionality_data" />

        <Button
            android:id="@+id/button_next_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/siguiente"
            android:textColor="@color/colorWhite"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_clear_data"
            app:layout_constraintTop_toBottomOf="@+id/spinner_nacionality_data" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>